# froggy

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: cd.yaml  ci.yaml
src/: game.rs  main.rs  menu.rs  splash.rs
www/: index.html
