# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "froggy"
version = "0.1.0"
edition = "2021"
authors = ["Julien Doutre <jul.doutre@gmail.com>"]
description = "A video game written in Rust with Bevy."
rust-version = "1.76.0"
documentation = "https://github.com/juliendoutre/froggy"
readme = "README.md"
homepage = "https://github.com/juliendoutre/froggy"
repository = "https://github.com/juliendoutre/froggy"
license-file = "LICENSE.md"
publish = false
resolver = "2"

[dependencies]
bevy = "0.14.2"

[build-dependencies]
wasm-bindgen-cli = "0.2.108"
wasm-opt = "0.116.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Optimize release binaries for size.
[profile.release]
opt-level = "z"
